Menu, Searchbar with bootstrap 4, still some bug related to responsive and collapse menu

--- a/class-25/assets/css/style.css
+++ b/class-25/assets/css/style.css
@@ -1,3 +1,10 @@
 .header-height { height: 120px; border: 1px solid; }
 .menu-height { height: 50px; border: 1px solid; }
 .content-height { height: 650px; border: 1px solid; }
+
+
+
+.logo-img {
+    height: 55px;
+    width: 55px;
+}
